objects/student__c.object
<CustomObject>
    <fields>
        <fullName>Aadhaar_Card_Number__c</fullName>
        <label>Aadhaar Card Number</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>IF( Total_Number_of_Ratings__c &lt; 1, 0, Sum_of_All_Ratings__c  /  Total_Number_of_Ratings__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Time__c</fullName>
        <label>Batch Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Opted__c</fullName>
        <label>Course Opted</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stream_Opted__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C++</fullName>
                </value>
                <value>
                    <fullName>Core Java</fullName>
                </value>
                <value>
                    <fullName>Adv Java</fullName>
                </value>
                <value>
                    <fullName>Salesforce Admin</fullName>
                </value>
                <value>
                    <fullName>Amazon AWS</fullName>
                </value>
                <value>
                    <fullName>Salesforce Developer\</fullName>
                </value>
                <value>
                    <fullName>MEAN Stack</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>Android App Development</fullName>
                </value>
                <value>
                    <fullName>IOS App Development</fullName>
                </value>
                <value>
                    <fullName>React</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_Working_at__c</fullName>
        <label>Currently Working at</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Deposited__c</fullName>
        <label>Fee Deposited</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Graduated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graduated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Playing</fullName>
                </value>
                <value>
                    <fullName>Traveling</fullName>
                </value>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Singing</fullName>
                </value>
                <value>
                    <fullName>Dancing</fullName>
                </value>
                <value>
                    <fullName>Painting</fullName>
                </value>
                <value>
                    <fullName>Playing Guitar</fullName>
                </value>
                <value>
                    <fullName>Crafting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Fees__c</fullName>
        <label>Initial Fees</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred by</label>
        <referenceTo>student__c</referenceTo>
        <relationshipLabel>students</relationshipLabel>
        <relationshipName>students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <label>Scholarship</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Social_Profile__c</fullName>
        <label>Social Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Stream_Opted__c</fullName>
        <label>Stream Opted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Computing</fullName>
                </value>
                <value>
                    <fullName>Core Programming Languages</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
                <value>
                    <fullName>Mobile App Development</fullName>
                </value>
                <value>
                    <fullName>Web Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>Enter your Email here</inlineHelpText>
        <label>Student Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <inlineHelpText>Enter your name here</inlineHelpText>
        <label>Student Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_s_Contact__c</fullName>
        <label>Student&apos;s Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student_s_Location__c</fullName>
        <label>Student&apos;s Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Student_s_State__c</fullName>
        <label>Student&apos;s State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_All_Ratings__c</fullName>
        <label>Sum of All Ratings</label>
        <summarizedField>Rating__c.Rating_out_of_10__c</summarizedField>
        <summaryForeignKey>Rating__c.Rating_given_to_which_Student__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Technology_Domain_Working_in__c</fullName>
        <label>Technology / Domain Working in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Science and Analytics</fullName>
                </value>
                <value>
                    <fullName>MEAN Stack</fullName>
                </value>
                <value>
                    <fullName>Mobile App Development</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <formula>Initial_Fees__c  +  Fee_Deposited__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Ratings__c</fullName>
        <label>Total Number of Ratings</label>
        <summaryForeignKey>Rating__c.Rating_given_to_which_Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X12th_Percentage__c</fullName>
        <label>12th Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>student</label>
    <nameField>
        <displayFormat>St  - {0000}</displayFormat>
        <label>student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>students</pluralLabel>
    <recordTypes>
        <fullName>Experience_Student</fullName>
        <active>true</active>
        <label>Experience Student</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fresher_Student</fullName>
        <active>true</active>
        <label>Fresher Student</label>
    </recordTypes>
    <recordTypes>
        <fullName>Graduate_Student</fullName>
        <active>true</active>
        <label>Graduate Student</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Lit</fullName>
        <active>true</active>
        <errorConditionFormula>BEGINS( Student_Name__c , &apos;himanshu&apos;)</errorConditionFormula>
        <errorMessage>This can&apos;t be done</errorMessage>
    </validationRules>
</CustomObject>